src/validation/tests/snapshots/rusty__validation__tests__function_parser_tests__function_inline_enum_return_unsupported.snap
---
source: src/parser/tests/function_parser_tests.rs
expression: diagnostics
---
error[E027]: Data Type (green, yellow, red) not supported as a function return type!
  ┌─ <internal>:1:16
  │
1 │ FUNCTION foo : (green, yellow, red) VAR_INPUT END_VAR END_FUNCTION
  │                ^^^^^^^^^^^^^^^^^^^^ Data Type (green, yellow, red) not supported as a function return type!
